<resources>
    <string name="app_name">БЖД Билеты</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Настройки</string>
    <string name="title_activity_train">Результаты поиска</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_scoreboard">Онлайн-табло</string>
    <string name="title_direction_activity">Направление</string>
    <string name="title_activity_passengers">Данные пассажиров</string>
    <string name="text_depart_station">Станция отправления</string>
    <string name="text_arrival_station">Станция назначения</string>
    <string name="text_depart_date">Дата отправления</string>
    <string name="text_search_button">Поиск</string>
    <string name="text_history">История</string>
    <string name="text_history_arrow">→</string>
    <string name="text_swap">Поменять местами</string>
    <string name="text_today">Сегодня</string>
    <string name="text_online_scoreboard">Онлайн-табло</string>
    <string name="text_drawer_cab">Личный кабинет</string>
    <string name="text_drawer_usage">Трафик</string>
    <string name="text_drawer_settings">Настройки</string>
    <string name="text_drawer_help">Справка</string>
    <string name="text_drawer_about">О программе</string>
    <string name="text_ereg">ЭР</string>
    <string name="text_seats_in_class">Мест:\u0020</string>
    <string name="text_overall">Общий:</string>
    <string name="text_sedentary">Сидячий:</string>
    <string name="text_second_class">Плацкарт:</string>
    <string name="text_compartment">Купе:</string>
    <string name="text_soft">Мягкий:</string>
    <string name="text_suite_wagon">СВ:</string>
    <string name="text_total_places">Всего мест:\u0020</string>
    <string name="text_low_seats">Нижние:\u0020</string>
    <string name="text_up_seats">Верхние:\u0020</string>
    <string name="text_lowside_places">Нижние бок:\u0020</string>
    <string name="text_upside_places">Верхние бок:\u0020</string>
    <string name="text_numofplaces">Номера мест:\u0020</string>
    <string name="text_no_data">н/д</string>
    <string name="text_a_lot_of_seats">∞</string>
    <string name="text_currency_bel">BYN</string>
    <string name="text_variants_places">≡</string>
    <string name="text_numbering">Нумерация:</string>
    <string name="text_way">Путь:</string>
    <string name="text_platform">Платформа:</string>
    <string name="text_tardiness">Опоздание:</string>
    <string name="text_arrival">Прибытие</string>
    <string name="text_depart">Отправление</string>
    <string name="text_alldays">Дни курсирования:</string>
    <string name="datePicker_positiveButton">Выбрать</string>
    <string name="datePicker_neutralButton">На все дни</string>
    <string name="datePicker_negativeButton_today">Сегодня</string>
    <string name="datePicker_negativeButton_tomorrow">Завтра</string>
    <string name="text_warning">Внимание!</string>
    <string name="text_ok">OK</string>
    <string name="text_settings">Настройки</string>
    <string name="text_error">Ошибка</string>
    <string name="text_refresh">Обновить</string>
    <string name="text_no_internet">Нет соединения</string>
    <string name="text_error_timeout">Ошибка/таймаут соединения</string>
    <string name="text_error_processing_data">Ошибка при обработке данных</string>
    <string name="text_spinner">Соединение, пожалуйста, подождите…</string>
    <string name="text_warning_cars">Информация о вагонах данного поезда недоступна</string>
    <string name="text_warning_no_trains">В данном направлении и в заданную дату поездов не найдено</string>
    <string name="text_enter_depart_station">Введите станцию отправления</string>
    <string name="text_enter_arrival_station">Введите станцию прибытия</string>
    <string name="text_set_max_date">Установлена максимальная возможная дата</string>
    <string name="text_route_tab">Остановки</string>
    <string name="text_cars_tab">Вагоны</string>
    <string name="text_info_tab">Инфо</string>
    <string name="text_route_divider">—</string>
    <string-array name="train_details_tab">
        <item>@string/text_route_tab</item>
        <item>@string/text_cars_tab</item>
        <item>@string/text_info_tab</item>
    </string-array>
    <string-array name="train_details_tab_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="text_follow_depart">Отправился</string>
    <string name="text_follow_on_station">На станции</string>
    <string name="text_follow_ontheway">В пути</string>
    <string-array name="Passengers4">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="Passengers3">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="Passengers2">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="Passengers1">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="Passengers0">
        <item>0</item>
    </string-array>
    <string-array name="DocTypes">
        <item>Паспорт Республики Беларусь</item>
        <item>Паспорт Российской Федерации (новый)</item>
        <item>Заграничный паспорт Российской Федерации</item>
        <item>Иностранный документ</item>
        <item>Паспорт моряка</item>
        <item>Свидетельство о рождении</item>
        <item>Военный билет</item>
        <item>Удостоверение личности</item>
        <item>Справка об утере паспорта</item>
        <item>Справка заключенного</item>
        <item>Вид на жительство</item>
        <item>Водительское удостоверение</item>
    </string-array>
    <string-array name="DocTypes2">
        <item>ПБ</item>
        <item>ПН</item>
        <item>ЗП</item>
        <item>ЗЗ</item>
        <item>ПМ</item>
        <item>СР</item>
        <item>ВБ</item>
        <item>УЛ</item>
        <item>СУ</item>
        <item>СЗ</item>
        <item>ВЖ</item>
        <item>ВУ</item>
    </string-array>
    <string name="text_order_button">Заказать</string>
</resources>