<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        xmlns:cv="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/cardview_margin"
        android:layout_marginRight="@dimen/cardview_margin"
        android:layout_marginTop="@dimen/cardview_margin_vert"
        android:layout_marginBottom="@dimen/cardview_margin_vert"
        android:id="@+id/cv"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="false"
        app:cardElevation="@dimen/cardview_elevation"
        android:focusable="false"
        android:clickable="false"
        android:foreground="?android:attr/selectableItemBackground"
        cv:cardCornerRadius="@dimen/cardview_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/cardview_ll_padding"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="2dp"
                    android:layout_marginRight="4dp"
                    android:id="@+id/train_num"
                    android:background="@drawable/rounded_grey"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/train_num"
                    android:id="@+id/train_route"
                    android:textSize="@dimen/text_size"
                    android:textStyle="normal"
                    android:textColor="@color/colorBlack"/>

                </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/descr"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/text_size_small"
                android:textStyle="normal"
                android:textColor="@color/colorGrey"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/train_depart_time"
                    android:textSize="@dimen/text_size_verylarge"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/train_arrival_time"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/text_size_verylarge"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>

            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_arrival"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="normal"
                        android:textColor="@color/colorGrey"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/text_depart"
                        android:textSize="@dimen/text_size_small"
                        android:textStyle="normal"
                        android:textColor="@color/colorGrey"/>

                </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/numbering_layout"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/text_numbering"
                        android:textStyle="normal"
                        android:textColor="@color/colorGrey"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:textSize="@dimen/text_size"
                        android:id="@+id/numbering"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/way_layout">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/text_way"
                        android:textStyle="normal"
                        android:textColor="@color/colorGrey"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:textSize="@dimen/text_size"
                        android:id="@+id/way"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:layout_marginLeft="6dp"
                        android:text="@string/text_platform"
                        android:textStyle="normal"
                        android:textColor="@color/colorGrey"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:textSize="@dimen/text_size"
                        android:id="@+id/platform"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/tardiness_layout">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/text_tardiness"
                        android:textStyle="normal"
                        android:textColor="@color/colorGrey" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:textSize="@dimen/text_size"
                        android:id="@+id/tardiness"
                        android:textStyle="bold"
                        android:textColor="@color/colorRed"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>