<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        xmlns:cv="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/cardview_margin"
        android:layout_marginRight="@dimen/cardview_margin"
        android:layout_marginTop="@dimen/cardview_margin_vert"
        android:layout_marginBottom="@dimen/cardview_margin_vert"
        android:id="@+id/cv"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="false"
        app:cardElevation="@dimen/cardview_elevation"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        cv:cardCornerRadius="@dimen/cardview_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/cardview_ll_padding_2"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/num"
                    android:paddingTop="2dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="2dp"
                    android:background="@drawable/rounded_black"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:layout_marginRight="4dp"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/num"
                    android:id="@+id/type"
                    android:paddingTop="2dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="2dp"
                    android:background="@drawable/rounded_black_grey"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:layout_marginRight="4dp"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/type"
                    android:layout_toLeftOf="@+id/price"
                    android:id="@+id/descr"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="normal"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/price"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:id="@+id/tplacespanel">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_total_places"
                    android:textStyle="normal"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tplaces"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/colorBlack"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="4dp"
                    android:id="@+id/ulplacespanel">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/lplacestext"
                            android:text="@string/text_low_seats"
                            android:textStyle="normal"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/colorBlack"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/lplaces"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/colorBlack"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/uplacestext"
                            android:text="@string/text_up_seats"
                            android:textStyle="normal"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/colorBlack"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/uplaces"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/colorBlack"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="4dp"
                    android:id="@+id/uslsplacespanel">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/lsplacestext"
                            android:text="@string/text_lowside_places"
                            android:textStyle="normal"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/colorBlack"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/lsplaces"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/colorBlack"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/usplacestext"
                            android:text="@string/text_upside_places"
                            android:textStyle="normal"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/colorBlack"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/usplaces"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/colorBlack"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:id="@+id/numofplacespanel">

                <View style="@style/Divider"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/numofplaces_text"
                    android:layout_centerVertical="true"
                    android:text="@string/text_numofplaces"
                    android:textStyle="normal"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/numofplaces"
                    android:layout_toRightOf="@+id/numofplaces_text"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/colorBlack"/>

            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>